Menu bar, Colour scheming and code formatting

--- a/index.html
+++ b/index.html
@@ -34,37 +34,35 @@ This page is a sample website, with multiple pages within one page
     <div data-role="page" id="home">
         <!-----------PANEL--------------------->
         <div data-role="panel" id="homeNav" data-position="left" data-display="reveal">
-    		<ul data-role="listview" data-inset="true" data-split-icon="gear">
+    		    <ul data-role="listview" data-inset="true" data-split-icon="gear">
                     <li> <a style="color:dodgerblue" href="#home">Home</a></li>
                     <li> <a style="color:dodgerblue"href="#info">Info</a></li>
-				   <li> <a style="color:dodgerblue"href="#Licences">Licence</a></li>
+				            <li> <a style="color:dodgerblue"href="#Licences">Licence</a></li>
             </ul>
             <a class="ui-btn ui-shadow ui-corner-all  ui-btn-mini" style="color:red" href="#homeNav">Close</a>
         </div><!-- /panel -->
 
 		<!--HOME PAGE NAVIGATIONAL HEADER-->
-        <div data-role="header" >
-        	<a class="ui-btn ui-shadow ui-corner-all ui-btn-inline ui-btn-mini ui-btn-left ui-btn-icon-left ui-icon-bars" style="color:dodgerblue" href="#homeNav">Menu</a>
-
-			<a class="ui-btn ui-shadow ui-corner-all ui-btn-inline ui-btn-mini ui-btn-right ui-btn-icon-right ui-icon-user"  style="color:dodgerblue" href="#login">Login</a>
-
-            <h1 style="color:darkblue;text-align:center">MeLicensed</h1>
+      <div data-role="header" >
+          <a class="ui-btn ui-shadow ui-corner-all ui-btn-inline ui-btn-mini ui-btn-left ui-btn-icon-left ui-icon-bars" style="color:dodgerblue" href="#homeNav">Menu</a>
+		      <a class="ui-btn ui-shadow ui-corner-all ui-btn-inline ui-btn-mini ui-btn-right ui-btn-icon-right ui-icon-user"  style="color:dodgerblue" href="#login">Login</a>
+          <h1 style="color:darkblue;text-align:center">MeLicensed</h1>
 
      	</div><!-- /header -->
 
 		<!--HOME PAGE CONTENT-->
 		<!-- home content -->
-        <div role="main" class="ui-content"  >
+      <div role="main" class="ui-content"  >
             <img src="./images/MeLicensedImage.jpg" width="100%" alt="MeLicensed"/>
-			<h2 style="color:grey;text-align:center">Welcome to MeLicensed</h2>
-			<h4 style="color:grey;text-align:center">Store all of your licences in a convenient, secure environment.</h4>
-			<br><br>
-        </div>
+			      <h2 style="color:grey;text-align:center">Welcome to MeLicensed</h2>
+			      <h4 style="color:grey;text-align:center">Store all of your licences in a convenient, secure environment.</h4>
+			      <br><br>
+     </div>
         <!-- end home content -->
 
 		<!--HOME PAGE FOOTER-->
         <div data-role="footer" data-position="fixed" >
-       <p align="center">©Ryan Poole 2018,  <a href="#T&C" > Terms & Conditions</a></p>
+          <p align="center">©Ryan Poole 2018,  <a href="#T&C" > Terms & Conditions</a></p>
         </div><!-- /footer -->
 
 	</div>
@@ -75,28 +73,26 @@ This page is a sample website, with multiple pages within one page
     <div data-role="page" id="info">
         <!-----------PANEL--------------------->
         <div data-role="panel" id="homeNav1" data-position="left" data-display="reveal">
-    		<ul data-role="listview" data-inset="true" data-split-icon="gear">
-                    <li> <a href="#home">Home</a></li>
-                    <li> <a href="#info">Info</a></li>
-				   <li> <a href="#Licences">Licence</a></li>
-            </ul>
-            <a class="ui-btn ui-shadow ui-corner-all  ui-btn-mini  " href="#homeNav1">Close</a>
+    		  <ul data-role="listview" data-inset="true" data-split-icon="gear">
+             <li> <a style="color:dodgerblue" href="#home">Home</a></li>
+             <li> <a style="color:dodgerblue"href="#info">Info</a></li>
+  				   <li> <a style="color:dodgerblue"href="#Licences">Licence</a></li>
+          </ul>
+              <a class="ui-btn ui-shadow ui-corner-all  ui-btn-mini" style="color:red" href="#homeNav1">Close</a>
         </div><!-- /panel -->
 
 		<!--info PAGE NAVIGATIONAL HEADER-->
-        <div data-role="header" >
-        	<a class="ui-btn ui-shadow ui-corner-all ui-btn-inline ui-btn-mini ui-btn-left ui-btn-icon-left ui-icon-bars"  href="#homeNav1">Menu</a>
-
-			<a class="ui-btn ui-shadow ui-corner-all ui-btn-inline ui-btn-mini ui-btn-right ui-btn-icon-right ui-icon-user"  style="color:dodgerblue" href="#login">Login</a>
-
-            <h1>MeLicensed</h1>
+    <div data-role="header" >
+        <a class="ui-btn ui-shadow ui-corner-all ui-btn-inline ui-btn-mini ui-btn-left ui-btn-icon-left ui-icon-bars" style="color:dodgerblue" href="#homeNav1">Menu</a>
+        <a class="ui-btn ui-shadow ui-corner-all ui-btn-inline ui-btn-mini ui-btn-right ui-btn-icon-right ui-icon-user"  style="color:dodgerblue" href="#login">Login</a>
+        <h1 style="color:darkblue;text-align:center">MeLicensed</h1>
      	</div><!-- /header -->
 
 		<!--info PAGE CONTENT-->
         <div role="main" class="ui-content"  >
         	<h1> Info</h1>
             <a href="http://demos.jquerymobile.com/1.4.5/" target="_blank">JQuery Mobile Demos</a>
-			<p>This is where you will get your FORM FIELD ELEMENTS to add to your app. <br><br><br> </p>
+			      <p>This is where you will get your FORM FIELD ELEMENTS to add to your app. <br><br><br> </p>
 
              <a href="https://themeroller.jquerymobile.com/" target="_blank">ThemeRoller</a>
              <p> If you want to change the look and feel of this mobile app ThemeRoller will allow you to do so easily.</p>
@@ -117,24 +113,25 @@ This page is a sample website, with multiple pages within one page
         <!-----------PANEL--------------------->
         <div data-role="panel" id="LicencePage" data-position="left" data-display="reveal">
     		<ul data-role="listview" data-inset="true" data-split-icon="gear">
-                    <li> <a href="#home">Home</a></li>
-					<li> <a href="#info">Info</a></li>
-                    <li> <a href="#Licences">Licence</a></li>
-            </ul>
-            <a class="ui-btn ui-shadow ui-corner-all  ui-btn-mini  " href="#LicencePage">Close</a>
+          <li> <a style="color:dodgerblue" href="#home">Home</a></li>
+          <li> <a style="color:dodgerblue"href="#info">Info</a></li>
+          <li> <a style="color:dodgerblue"href="#Licences">Licence</a></li>
+         </ul>
+           <a class="ui-btn ui-shadow ui-corner-all  ui-btn-mini" style="color:red" href="#LicencePage">Close</a>
         </div><!-- /panel -->
 
 		<!--licence PAGE NAVIGATIONAL HEADER-->
-        <div data-role="header" >
-        	<a class="ui-btn ui-shadow ui-corner-all ui-btn-inline ui-btn-mini ui-btn-left ui-btn-icon-left ui-icon-bars"  href="#LicencePage">Menu</a>
-            <h1>MeLicensed</h1>
+    <div data-role="header" >
+        <a class="ui-btn ui-shadow ui-corner-all ui-btn-inline ui-btn-mini ui-btn-left ui-btn-icon-left ui-icon-bars" style="color:dodgerblue" href="#LicencePage">Menu</a>
+        <a class="ui-btn ui-shadow ui-corner-all ui-btn-inline ui-btn-mini ui-btn-right ui-btn-icon-right ui-icon-user"  style="color:dodgerblue" href="#login">Login</a>
+        <h1 style="color:darkblue;text-align:center">MeLicensed</h1>
      	</div><!-- /header -->
 
 		<!--licence PAGE CONTENT-->
         <div role="main" class="ui-content"  >
         	<h1>Licences</h1>
-              <br>
-			<a href="https://themeroller.jquerymobile.com/" width="40%" class="ui-btn">Enter</a>
+            <p>Add licence details, licence Images, and licence scroll bar</p>
+            <br>
         </div>
         <!-- end page content -->
 
@@ -167,7 +164,6 @@ This page is a sample website, with multiple pages within one page
 
 		<!--login PAGE CONTENT-->
         <div role="main" class="ui-content ui-shadow ui-corner-all" >
-
         	  <h1 style="color:darkblue;text-align:left">Login</h1>
              <label for="username">Username:</label>
 				<input type="text" name="username" id="username" placeholder="Your email address" data-mini="true" >
@@ -196,26 +192,27 @@ This page is a sample website, with multiple pages within one page
     <div data-role="page" id="T&C">
         <!-----------PANEL--------------------->
         <div data-role="panel" id="T&CPage" data-position="left" data-display="reveal">
-    		<ul data-role="listview" data-inset="true" data-split-icon="gear">
-                    <li> <a href="#home">Home</a></li>
-					<li> <a href="#info">Info</a></li>
-                    <li> <a href="#Licences">Licence</a></li>
-            </ul>
-            <a class="ui-btn ui-shadow ui-corner-all  ui-btn-mini  " href="#T&CPage">Close</a>
+          <ul data-role="listview" data-inset="true" data-split-icon="gear">
+             <li> <a style="color:dodgerblue" href="#home">Home</a></li>
+             <li> <a style="color:dodgerblue"href="#info">Info</a></li>
+  				   <li> <a style="color:dodgerblue"href="#Licences">Licence</a></li>
+          </ul>
+              <a class="ui-btn ui-shadow ui-corner-all  ui-btn-mini" style="color:red" href="#T&CPage">Close</a>
         </div><!-- /panel -->
 
 		<!--Terms & Conditions PAGE NAVIGATIONAL HEADER-->
-        <div data-role="header" >
-        	<a class="ui-btn ui-shadow ui-corner-all ui-btn-inline ui-btn-mini ui-btn-left ui-btn-icon-left ui-icon-bars"  href="#T&CPage">Menu</a>
-            <h1>MeLicensed</h1>
+    <div data-role="header" >
+        <a class="ui-btn ui-shadow ui-corner-all ui-btn-inline ui-btn-mini ui-btn-left ui-btn-icon-left ui-icon-bars" style="color:dodgerblue" href="#T&CPage">Menu</a>
+        <a class="ui-btn ui-shadow ui-corner-all ui-btn-inline ui-btn-mini ui-btn-right ui-btn-icon-right ui-icon-user"  style="color:dodgerblue" href="#login">Login</a>
+        <h1 style="color:darkblue;text-align:center">MeLicensed</h1>
      	</div><!-- /header -->
 
 		<!--Terms & Conditions PAGE CONTENT-->
-        <div role="main" class="ui-content"  >
-        	<h1>Terms & Conditions</h1>
-              <br>
-			<p>Use this at your own risk</p>
-        </div>
+    <div role="main" class="ui-content"  >
+        <h1>Terms & Conditions</h1>
+        <br>
+          	<p>Use this at your own risk</p>
+  </div>
         <!-- end page content -->
 
 
@@ -224,7 +221,8 @@ This page is a sample website, with multiple pages within one page
         <p align="center">©Ryan Poole 2018,  <a href="#T&C" > Terms & Conditions</a></p>
         </div><!-- /footer -->
 
-	</div><!-- /end Terms & Conditions page -->
+	     </div><!-- /end Terms & Conditions page -->
+
 
 
 </body>
