--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@ This page is a sample website, with multiple pages within one page
 
 		<!--info PAGE CONTENT-->
         <div role="main" class="ui-content"  >
-        	<h1> Info</h1>
+        	 <h1 style="color:darkblue;text-align:left">Info</h1>
             <a href="http://demos.jquerymobile.com/1.4.5/" target="_blank">JQuery Mobile Demos</a>
 			      <p>This is where you will get your FORM FIELD ELEMENTS to add to your app. <br><br><br> </p>
 
@@ -129,7 +129,7 @@ This page is a sample website, with multiple pages within one page
 
 		<!--licence PAGE CONTENT-->
         <div role="main" class="ui-content"  >
-        	<h1>Licences</h1>
+        	 <h1 style="color:darkblue;text-align:left">Licences</h1>
             <p>Add licence details, licence Images, and licence scroll bar</p>
             <br>
         </div>
@@ -171,7 +171,7 @@ This page is a sample website, with multiple pages within one page
 			  <input type="password" name="password" id="password" placeholder="Password: 6-14 characters" data-mini="true">
 
               <br>
-			<a href="#Licences" style="background-color:dodgerblue;color:white"
+			<a href="#home" style="background-color:dodgerblue;color:white"
 			   class="ui-btn ui-shadow ui-corner-all ui-btn-inline ui-btn-mini ui-btn-bottom ui-btn-active">Log In</a>
 
 			<p>Forgot your password? <a href="#">Click here</a></p>
@@ -209,7 +209,7 @@ This page is a sample website, with multiple pages within one page
 
 		<!--Terms & Conditions PAGE CONTENT-->
     <div role="main" class="ui-content"  >
-        <h1>Terms & Conditions</h1>
+         <h1 style="color:darkblue;text-align:left">Terms & Conditions</h1>
         <br>
           	<p>Use this at your own risk</p>
   </div>
