Login Page Edit, Licence Editing Page

--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@ This page is a sample website, with multiple pages within one page
                     <li> <a style="color:dodgerblue" href="#home">Home</a></li>
                     <li> <a style="color:dodgerblue"href="#info">Info</a></li>
 				            <li> <a style="color:dodgerblue"href="#Licences">Licence</a></li>
+                    <li> <a style="color:dodgerblue"href="#LicenceEdit">Licence Editing</a></li>
             </ul>
             <a class="ui-btn ui-shadow ui-corner-all  ui-btn-mini" style="color:red" href="#homeNav">Close</a>
         </div><!-- /panel -->
@@ -77,6 +78,7 @@ This page is a sample website, with multiple pages within one page
              <li> <a style="color:dodgerblue" href="#home">Home</a></li>
              <li> <a style="color:dodgerblue"href="#info">Info</a></li>
   				   <li> <a style="color:dodgerblue"href="#Licences">Licence</a></li>
+             <li> <a style="color:dodgerblue"href="#LicenceEdit">Licence Editing</a></li>
           </ul>
               <a class="ui-btn ui-shadow ui-corner-all  ui-btn-mini" style="color:red" href="#homeNav1">Close</a>
         </div><!-- /panel -->
@@ -113,9 +115,10 @@ This page is a sample website, with multiple pages within one page
         <!-----------PANEL--------------------->
         <div data-role="panel" id="LicencePage" data-position="left" data-display="reveal">
     		<ul data-role="listview" data-inset="true" data-split-icon="gear">
-          <li> <a style="color:dodgerblue" href="#home">Home</a></li>
-          <li> <a style="color:dodgerblue"href="#info">Info</a></li>
-          <li> <a style="color:dodgerblue"href="#Licences">Licence</a></li>
+           <li> <a style="color:dodgerblue" href="#home">Home</a></li>
+           <li> <a style="color:dodgerblue"href="#info">Info</a></li>
+           <li> <a style="color:dodgerblue"href="#Licences">Licence</a></li>
+           <li> <a style="color:dodgerblue"href="#LicenceEdit">Licence Editing</a></li>
          </ul>
            <a class="ui-btn ui-shadow ui-corner-all  ui-btn-mini" style="color:red" href="#LicencePage">Close</a>
         </div><!-- /panel -->
@@ -143,6 +146,43 @@ This page is a sample website, with multiple pages within one page
 
 	</div><!-- /end licence page -->
 
+  <!--PAGE: Terms & Conditions PAGE  -->
+  <div data-role="page" id="LicenceEdit">
+      <!-----------PANEL--------------------->
+      <div data-role="panel" id="LicenceEditPage" data-position="left" data-display="reveal">
+        <ul data-role="listview" data-inset="true" data-split-icon="gear">
+           <li> <a style="color:dodgerblue" href="#home">Home</a></li>
+           <li> <a style="color:dodgerblue"href="#info">Info</a></li>
+           <li> <a style="color:dodgerblue"href="#Licences">Licence</a></li>
+           <li> <a style="color:dodgerblue"href="#LicenceEdit">Licence Editing</a></li>
+        </ul>
+            <a class="ui-btn ui-shadow ui-corner-all  ui-btn-mini" style="color:red" href="#LicenceEditPage">Close</a>
+      </div><!-- /panel -->
+
+  <!--Terms & Conditions PAGE NAVIGATIONAL HEADER-->
+  <div data-role="header" >
+      <a class="ui-btn ui-shadow ui-corner-all ui-btn-inline ui-btn-mini ui-btn-left ui-btn-icon-left ui-icon-bars" style="color:dodgerblue" href="#LicenceEditPage">Menu</a>
+      <a class="ui-btn ui-shadow ui-corner-all ui-btn-inline ui-btn-mini ui-btn-right ui-btn-icon-right ui-icon-user"  style="color:dodgerblue" href="#login">Login</a>
+      <h1 style="color:darkblue;text-align:center">MeLicensed</h1>
+    </div><!-- /header -->
+
+  <!--Licence Edit Page PAGE CONTENT-->
+  <div role="main" class="ui-content"  >
+      <h1 style="color:darkblue;text-align:left">Licence Editing</h1>
+      <br>
+  </div>
+      <!-- end page content -->
+
+
+  <!--Licence Edit Page PAGE FOOTER-->
+      <div data-role="footer" data-position="fixed" >
+      <p align="center">©Ryan Poole 2018,  <a href="#LicenceEdit" > Terms & Conditions</a></p>
+      </div><!-- /footer -->
+
+     </div><!-- /end Terms & Conditions page -->
+
+
+
 	<!--PAGE: login  PAGE  -->
     <div data-role="page" id="login">
         <!-----------PANEL--------------------->
@@ -150,7 +190,7 @@ This page is a sample website, with multiple pages within one page
     		<ul data-role="listview" data-inset="true" data-split-icon="gear">
                     <li> <a href="#home">Home</a></li>
                     <li> <a href="#info">Info</a></li>
-				   <li> <a href="#Licences">Licence</a></li>
+				            <li> <a href="#Licences">Licence</a></li>
             </ul>
             <a class="ui-btn ui-shadow ui-corner-all  ui-btn-mini  " href="#LoginPage">Close</a>
         </div><!-- /panel -->
@@ -175,6 +215,7 @@ This page is a sample website, with multiple pages within one page
 			   class="ui-btn ui-shadow ui-corner-all ui-btn-inline ui-btn-mini ui-btn-bottom ui-btn-active">Log In</a>
 
 			<p>Forgot your password? <a href="#">Click here</a></p>
+      <p>Not registered? <a href="#">Click here</a></p>
 
         </div>
         <!-- end page content -->
@@ -196,6 +237,7 @@ This page is a sample website, with multiple pages within one page
              <li> <a style="color:dodgerblue" href="#home">Home</a></li>
              <li> <a style="color:dodgerblue"href="#info">Info</a></li>
   				   <li> <a style="color:dodgerblue"href="#Licences">Licence</a></li>
+             <li> <a style="color:dodgerblue"href="#LicenceEdit">Licence Edit</a></li>
           </ul>
               <a class="ui-btn ui-shadow ui-corner-all  ui-btn-mini" style="color:red" href="#T&CPage">Close</a>
         </div><!-- /panel -->
