--- a/index.html
+++ b/index.html
@@ -133,6 +133,14 @@ This page is a sample website, with multiple pages within one page
 		<!--licence PAGE CONTENT-->
         <div role="main" class="ui-content"  >
         	 <h1 style="color:darkblue;text-align:left">Licences</h1>
+           <a href="#Drivers" style="background-color:dodgerblue;color:white"
+     			   class="ui-btn ui-shadow ui-corner-all ui-btn-inline ui-btn-mini ui-btn-bottom ui-btn-active">Driver's Licence</a>
+             <br><br>
+           <a href="#Boating" style="background-color:dodgerblue;color:white"
+             class="ui-btn ui-shadow ui-corner-all ui-btn-inline ui-btn-mini ui-btn-bottom ui-btn-active">Boating Licence</a>
+             <br><br>
+           <a href="#Hunting" style="background-color:dodgerblue;color:white"
+             class="ui-btn ui-shadow ui-corner-all ui-btn-inline ui-btn-mini ui-btn-bottom ui-btn-active">Hunting Licence</a>
             <p>Add licence details, licence Images, and licence scroll bar</p>
             <br>
         </div>
@@ -146,7 +154,7 @@ This page is a sample website, with multiple pages within one page
 
 	</div><!-- /end licence page -->
 
-  <!--PAGE: Terms & Conditions PAGE  -->
+  <!--PAGE: Licence Editing PAGE  -->
   <div data-role="page" id="LicenceEdit">
       <!-----------PANEL--------------------->
       <div data-role="panel" id="LicenceEditPage" data-position="left" data-display="reveal">
@@ -159,7 +167,7 @@ This page is a sample website, with multiple pages within one page
             <a class="ui-btn ui-shadow ui-corner-all  ui-btn-mini" style="color:red" href="#LicenceEditPage">Close</a>
       </div><!-- /panel -->
 
-  <!--Terms & Conditions PAGE NAVIGATIONAL HEADER-->
+  <!--Licence Editing PAGE NAVIGATIONAL HEADER-->
   <div data-role="header" >
       <a class="ui-btn ui-shadow ui-corner-all ui-btn-inline ui-btn-mini ui-btn-left ui-btn-icon-left ui-icon-bars" style="color:dodgerblue" href="#LicenceEditPage">Menu</a>
       <a class="ui-btn ui-shadow ui-corner-all ui-btn-inline ui-btn-mini ui-btn-right ui-btn-icon-right ui-icon-user"  style="color:dodgerblue" href="#login">Login</a>
@@ -181,7 +189,67 @@ This page is a sample website, with multiple pages within one page
 
      </div><!-- /end Terms & Conditions page -->
 
+     <!--PAGE: Driver's Licence PAGE  -->
+         <div data-role="page" id="Drivers">
+             <!-----------PANEL--------------------->
+             <div data-role="panel" id="Drivers Page" data-position="left" data-display="reveal">
+         		  <ul data-role="listview" data-inset="true" data-split-icon="gear">
+                  <li> <a style="color:dodgerblue" href="#home">Home</a></li>
+                  <li> <a style="color:dodgerblue"href="#info">Info</a></li>
+       				   <li> <a style="color:dodgerblue"href="#Licences">Licence</a></li>
+                  <li> <a style="color:dodgerblue"href="#LicenceEdit">Licence Editing</a></li>
+               </ul>
+                   <a class="ui-btn ui-shadow ui-corner-all  ui-btn-mini" style="color:red" href="#Driver's Page">Close</a>
+             </div><!-- /panel -->
 
+     		<!--Driver's Licence Page PAGE NAVIGATIONAL HEADER-->
+         <div data-role="header" >
+             <a class="ui-btn ui-shadow ui-corner-all ui-btn-inline ui-btn-mini ui-btn-left ui-btn-icon-left ui-icon-bars" style="color:dodgerblue" href="#Drivers Page">Menu</a>
+             <a class="ui-btn ui-shadow ui-corner-all ui-btn-inline ui-btn-mini ui-btn-right ui-btn-icon-right ui-icon-user"  style="color:dodgerblue" href="#login">Login</a>
+             <h1 style="color:darkblue;text-align:center">MeLicensed</h1>
+          	</div><!-- /header -->
+
+     		<!--Driver's Licence Page PAGE CONTENT-->
+             <div role="main" class="ui-content"  >
+             	 <h1 style="color:darkblue;text-align:left">Driver's Licence</h1>
+                   <br>
+             </div>
+     		<!-- Driver's Licence Page PAGE FOOTER-->
+             <div data-role="footer" data-position="fixed" >
+             <p align="center">©Ryan Poole 2018,  <a href="#T&C" > Terms & Conditions</a></p>
+             </div><!-- /footer -->
+             <!-- end page content -->
+           </div>
+
+             <!--PAGE: Boating Licence PAGE  -->
+                 <div data-role="page" id="Boating">
+                   <!-----------PANEL--------------------->
+                   <div data-role="panel" id="BoatingPage Page" data-position="left" data-display="reveal">
+               		  <ul data-role="listview" data-inset="true" data-split-icon="gear">
+                        <li> <a style="color:dodgerblue" href="#home">Home</a></li>
+                        <li> <a style="color:dodgerblue"href="#info">Info</a></li>
+             				    <li> <a style="color:dodgerblue"href="#Licences">Licence</a></li>
+                        <li> <a style="color:dodgerblue"href="#LicenceEdit">Licence Editing</a></li>
+                     </ul>
+                         <a class="ui-btn ui-shadow ui-corner-all  ui-btn-mini" style="color:red" href="#BoatingPage">Close</a>
+                   </div><!-- /panel -->
+             		<!-- Boating Licence Page PAGE NAVIGATIONAL HEADER-->
+                 <div data-role="header" >
+                     <a class="ui-btn ui-shadow ui-corner-all ui-btn-inline ui-btn-mini ui-btn-left ui-btn-icon-left ui-icon-bars" style="color:dodgerblue" href="#BoatingPage">Menu</a>
+                     <a class="ui-btn ui-shadow ui-corner-all ui-btn-inline ui-btn-mini ui-btn-right ui-btn-icon-right ui-icon-user"  style="color:dodgerblue" href="#login">Login</a>
+                     <h1 style="color:darkblue;text-align:center">MeLicensed</h1>
+                  	</div><!-- /header -->
+
+             		<!-- Boating Licence Page PAGE CONTENT-->
+                     <div role="main" class="ui-content"  >
+                     	 <h1 style="color:darkblue;text-align:left">Boating Licence</h1>
+                           <br>
+                     </div>
+             		<!-- Boating Licence Page PAGE FOOTER-->
+                     <div data-role="footer" data-position="fixed" >
+                     <p align="center">©Ryan Poole 2018,  <a href="#T&C" > Terms & Conditions</a></p>
+                     </div><!-- /footer -->
+                     <!-- end page content -->
 
 	<!--PAGE: login  PAGE  -->
     <div data-role="page" id="login">
@@ -231,7 +299,7 @@ This page is a sample website, with multiple pages within one page
 
 		<!--PAGE: Terms & Conditions PAGE  -->
     <div data-role="page" id="T&C">
-        <!-----------PANEL--------------------->
+        <!-----------PANEL----------->
         <div data-role="panel" id="T&CPage" data-position="left" data-display="reveal">
           <ul data-role="listview" data-inset="true" data-split-icon="gear">
              <li> <a style="color:dodgerblue" href="#home">Home</a></li>
