Licence Pages updates + Hunting Licence Image

--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@ This page is a sample website, with multiple pages within one page
       <h1 style="color:darkblue;text-align:center">MeLicensed</h1>
     </div><!-- /header -->
 
-  <!--Licence Edit Page PAGE CONTENT-->
+  <!--Licence Edit PAGE CONTENT-->
   <div role="main" class="ui-content"  >
       <h1 style="color:darkblue;text-align:left">Licence Editing</h1>
       <br>
@@ -182,7 +182,7 @@ This page is a sample website, with multiple pages within one page
       <!-- end page content -->
 
 
-  <!--Licence Edit Page PAGE FOOTER-->
+  <!--Licence Edit PAGE FOOTER-->
       <div data-role="footer" data-position="fixed" >
       <p align="center">©Ryan Poole 2018,  <a href="#LicenceEdit" > Terms & Conditions</a></p>
       </div><!-- /footer -->
@@ -202,19 +202,19 @@ This page is a sample website, with multiple pages within one page
                    <a class="ui-btn ui-shadow ui-corner-all  ui-btn-mini" style="color:red" href="#Driver's Page">Close</a>
              </div><!-- /panel -->
 
-     		<!--Driver's Licence Page PAGE NAVIGATIONAL HEADER-->
+     		<!--Driver's Licence PAGE NAVIGATIONAL HEADER-->
          <div data-role="header" >
              <a class="ui-btn ui-shadow ui-corner-all ui-btn-inline ui-btn-mini ui-btn-left ui-btn-icon-left ui-icon-bars" style="color:dodgerblue" href="#Drivers Page">Menu</a>
              <a class="ui-btn ui-shadow ui-corner-all ui-btn-inline ui-btn-mini ui-btn-right ui-btn-icon-right ui-icon-user"  style="color:dodgerblue" href="#login">Login</a>
              <h1 style="color:darkblue;text-align:center">MeLicensed</h1>
           	</div><!-- /header -->
 
-     		<!--Driver's Licence Page PAGE CONTENT-->
+     		<!--Driver's Licence PAGE CONTENT-->
              <div role="main" class="ui-content"  >
              	 <h1 style="color:darkblue;text-align:left">Driver's Licence</h1>
                    <br>
              </div>
-     		<!-- Driver's Licence Page PAGE FOOTER-->
+     		<!-- Driver's Licence PAGE FOOTER-->
              <div data-role="footer" data-position="fixed" >
              <p align="center">©Ryan Poole 2018,  <a href="#T&C" > Terms & Conditions</a></p>
              </div><!-- /footer -->
@@ -224,7 +224,7 @@ This page is a sample website, with multiple pages within one page
              <!--PAGE: Boating Licence PAGE  -->
                  <div data-role="page" id="Boating">
                    <!-----------PANEL--------------------->
-                   <div data-role="panel" id="BoatingPage Page" data-position="left" data-display="reveal">
+                   <div data-role="panel" id="BoatingPage" data-position="left" data-display="reveal">
                		  <ul data-role="listview" data-inset="true" data-split-icon="gear">
                         <li> <a style="color:dodgerblue" href="#home">Home</a></li>
                         <li> <a style="color:dodgerblue"href="#info">Info</a></li>
@@ -233,14 +233,14 @@ This page is a sample website, with multiple pages within one page
                      </ul>
                          <a class="ui-btn ui-shadow ui-corner-all  ui-btn-mini" style="color:red" href="#BoatingPage">Close</a>
                    </div><!-- /panel -->
-             		<!-- Boating Licence Page PAGE NAVIGATIONAL HEADER-->
+             		<!-- Boating Licence PAGE NAVIGATIONAL HEADER-->
                  <div data-role="header" >
                      <a class="ui-btn ui-shadow ui-corner-all ui-btn-inline ui-btn-mini ui-btn-left ui-btn-icon-left ui-icon-bars" style="color:dodgerblue" href="#BoatingPage">Menu</a>
                      <a class="ui-btn ui-shadow ui-corner-all ui-btn-inline ui-btn-mini ui-btn-right ui-btn-icon-right ui-icon-user"  style="color:dodgerblue" href="#login">Login</a>
                      <h1 style="color:darkblue;text-align:center">MeLicensed</h1>
                   	</div><!-- /header -->
 
-             		<!-- Boating Licence Page PAGE CONTENT-->
+             		<!-- Boating Licence PAGE CONTENT-->
                      <div role="main" class="ui-content"  >
                      	 <h1 style="color:darkblue;text-align:left">Boating Licence</h1>
                            <br>
@@ -250,6 +250,39 @@ This page is a sample website, with multiple pages within one page
                      <p align="center">©Ryan Poole 2018,  <a href="#T&C" > Terms & Conditions</a></p>
                      </div><!-- /footer -->
                      <!-- end page content -->
+                   </div>
+
+                   <!--PAGE: Hunting Licence PAGE  -->
+                       <div data-role="page" id="Hunting">
+                         <!-----------PANEL--------------------->
+                         <div data-role="panel" id="HuntingPage" data-position="left" data-display="reveal">
+                     		  <ul data-role="listview" data-inset="true" data-split-icon="gear">
+                              <li> <a style="color:dodgerblue" href="#home">Home</a></li>
+                              <li> <a style="color:dodgerblue"href="#info">Info</a></li>
+                   				    <li> <a style="color:dodgerblue"href="#Licences">Licence</a></li>
+                              <li> <a style="color:dodgerblue"href="#LicenceEdit">Licence Editing</a></li>
+                           </ul>
+                               <a class="ui-btn ui-shadow ui-corner-all  ui-btn-mini" style="color:red" href="#HuntingPage">Close</a>
+                         </div><!-- /panel -->
+                   		<!-- Hunting Licence PAGE NAVIGATIONAL HEADER-->
+                       <div data-role="header" >
+                           <a class="ui-btn ui-shadow ui-corner-all ui-btn-inline ui-btn-mini ui-btn-left ui-btn-icon-left ui-icon-bars" style="color:dodgerblue" href="#HuntingPage">Menu</a>
+                           <a class="ui-btn ui-shadow ui-corner-all ui-btn-inline ui-btn-mini ui-btn-right ui-btn-icon-right ui-icon-user"  style="color:dodgerblue" href="#login">Login</a>
+                           <h1 style="color:darkblue;text-align:center">MeLicensed</h1>
+                        	</div><!-- /header -->
+
+                   		<!-- Hunting Licence PAGE CONTENT-->
+                           <div role="main" class="ui-content"  >
+                           	 <h1 style="color:darkblue;text-align:left">Hunting Licence</h1>
+                             <br><br>
+                             <img src="./images/Hunting Licence.jpg" width="30%" alt="MeLicensed"/>
+                           </div>
+                   		<!-- Hunting Licence PAGE FOOTER-->
+                           <div data-role="footer" data-position="fixed" >
+                           <p align="center">©Ryan Poole 2018,  <a href="#T&C" > Terms & Conditions</a></p>
+                           </div><!-- /footer -->
+                           <!-- end page content -->
+                         </div>
 
 	<!--PAGE: login  PAGE  -->
     <div data-role="page" id="login">
