--- a/index.html
+++ b/index.html
@@ -212,7 +212,8 @@ This page is a sample website, with multiple pages within one page
      		<!--Driver's Licence PAGE CONTENT-->
              <div role="main" class="ui-content"  >
              	 <h1 style="color:darkblue;text-align:left">Driver's Licence</h1>
-                   <br>
+                   <br><br>
+               <img src="./images/Blank Drivers Licence.jpg" width="30%" alt="MeLicensed"/>
              </div>
      		<!-- Driver's Licence PAGE FOOTER-->
              <div data-role="footer" data-position="fixed" >
