Driver's Licence page now links to Licence Edit Page - Menu bar no longer working

--- a/index.html
+++ b/index.html
@@ -38,7 +38,6 @@ This page is a sample website, with multiple pages within one page
                     <li> <a style="color:dodgerblue" href="#home">Home</a></li>
                     <li> <a style="color:dodgerblue"href="#info">Info</a></li>
 				            <li> <a style="color:dodgerblue"href="#Licences">Licence</a></li>
-                    <li> <a style="color:dodgerblue"href="#LicenceEdit">Licence Editing</a></li>
             </ul>
             <a class="ui-btn ui-shadow ui-corner-all  ui-btn-mini" style="color:red" href="#homeNav">Close</a>
         </div><!-- /panel -->
@@ -78,7 +77,6 @@ This page is a sample website, with multiple pages within one page
              <li> <a style="color:dodgerblue" href="#home">Home</a></li>
              <li> <a style="color:dodgerblue"href="#info">Info</a></li>
   				   <li> <a style="color:dodgerblue"href="#Licences">Licence</a></li>
-             <li> <a style="color:dodgerblue"href="#LicenceEdit">Licence Editing</a></li>
           </ul>
               <a class="ui-btn ui-shadow ui-corner-all  ui-btn-mini" style="color:red" href="#homeNav1">Close</a>
         </div><!-- /panel -->
@@ -118,7 +116,6 @@ This page is a sample website, with multiple pages within one page
            <li> <a style="color:dodgerblue" href="#home">Home</a></li>
            <li> <a style="color:dodgerblue"href="#info">Info</a></li>
            <li> <a style="color:dodgerblue"href="#Licences">Licence</a></li>
-           <li> <a style="color:dodgerblue"href="#LicenceEdit">Licence Editing</a></li>
          </ul>
            <a class="ui-btn ui-shadow ui-corner-all  ui-btn-mini" style="color:red" href="#LicencePage">Close</a>
         </div><!-- /panel -->
@@ -162,7 +159,6 @@ This page is a sample website, with multiple pages within one page
            <li> <a style="color:dodgerblue" href="#home">Home</a></li>
            <li> <a style="color:dodgerblue"href="#info">Info</a></li>
            <li> <a style="color:dodgerblue"href="#Licences">Licence</a></li>
-           <li> <a style="color:dodgerblue"href="#LicenceEdit">Licence Editing</a></li>
         </ul>
             <a class="ui-btn ui-shadow ui-corner-all  ui-btn-mini" style="color:red" href="#LicenceEditPage">Close</a>
       </div><!-- /panel -->
@@ -197,7 +193,6 @@ This page is a sample website, with multiple pages within one page
                   <li> <a style="color:dodgerblue" href="#home">Home</a></li>
                   <li> <a style="color:dodgerblue"href="#info">Info</a></li>
        				   <li> <a style="color:dodgerblue"href="#Licences">Licence</a></li>
-                  <li> <a style="color:dodgerblue"href="#LicenceEdit">Licence Editing</a></li>
                </ul>
                    <a class="ui-btn ui-shadow ui-corner-all  ui-btn-mini" style="color:red" href="#Driver's Page">Close</a>
              </div><!-- /panel -->
@@ -210,10 +205,12 @@ This page is a sample website, with multiple pages within one page
           	</div><!-- /header -->
 
      		<!--Driver's Licence PAGE CONTENT-->
-             <div role="main" class="ui-content"  >
+             <div role="main" class="ui-content">
              	 <h1 style="color:darkblue;text-align:left">Driver's Licence</h1>
                    <br><br>
                <img src="./images/Blank Drivers Licence.jpg" width="30%" alt="MeLicensed"/>
+                   <br><br>
+              <p> Want to edit your licence? <a href="#LicenceEdit"> Click Here</a></p>
              </div>
      		<!-- Driver's Licence PAGE FOOTER-->
              <div data-role="footer" data-position="fixed" >
@@ -230,7 +227,6 @@ This page is a sample website, with multiple pages within one page
                         <li> <a style="color:dodgerblue" href="#home">Home</a></li>
                         <li> <a style="color:dodgerblue"href="#info">Info</a></li>
              				    <li> <a style="color:dodgerblue"href="#Licences">Licence</a></li>
-                        <li> <a style="color:dodgerblue"href="#LicenceEdit">Licence Editing</a></li>
                      </ul>
                          <a class="ui-btn ui-shadow ui-corner-all  ui-btn-mini" style="color:red" href="#BoatingPage">Close</a>
                    </div><!-- /panel -->
@@ -261,7 +257,6 @@ This page is a sample website, with multiple pages within one page
                               <li> <a style="color:dodgerblue" href="#home">Home</a></li>
                               <li> <a style="color:dodgerblue"href="#info">Info</a></li>
                    				    <li> <a style="color:dodgerblue"href="#Licences">Licence</a></li>
-                              <li> <a style="color:dodgerblue"href="#LicenceEdit">Licence Editing</a></li>
                            </ul>
                                <a class="ui-btn ui-shadow ui-corner-all  ui-btn-mini" style="color:red" href="#HuntingPage">Close</a>
                          </div><!-- /panel -->
@@ -313,7 +308,7 @@ This page is a sample website, with multiple pages within one page
 			  <input type="password" name="password" id="password" placeholder="Password: 6-14 characters" data-mini="true">
 
               <br>
-			<a href="#home" style="background-color:dodgerblue;color:white"
+			<a href="#Licences" style="background-color:dodgerblue;color:white"
 			   class="ui-btn ui-shadow ui-corner-all ui-btn-inline ui-btn-mini ui-btn-bottom ui-btn-active">Log In</a>
 
 			<p>Forgot your password? <a href="#">Click here</a></p>
@@ -339,7 +334,6 @@ This page is a sample website, with multiple pages within one page
              <li> <a style="color:dodgerblue" href="#home">Home</a></li>
              <li> <a style="color:dodgerblue"href="#info">Info</a></li>
   				   <li> <a style="color:dodgerblue"href="#Licences">Licence</a></li>
-             <li> <a style="color:dodgerblue"href="#LicenceEdit">Licence Edit</a></li>
           </ul>
               <a class="ui-btn ui-shadow ui-corner-all  ui-btn-mini" style="color:red" href="#T&CPage">Close</a>
         </div><!-- /panel -->
